# mediahound

./: .coverage  .dockerignore  .gitattributes  .gitignore  ARCHITECTURE.md  CHANGELOG.md  CODE_OF_CONDUCT.md  COMPARISON.md  CONTRIBUTING.md  DEPLOYMENT.md  Dockerfile  Gemfile  MANIFEST.in  PRIVACY.md  README.md  RELEASING.md  SECURITY.md  SIGNING.md  config.example.toml  docker-compose.yml  pyproject.toml  requirements.txt
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  codeql.yml  dependabot-automerge.yml  desktop.yml  pages.yml  publish.yml  wiki-sync.yml
docs/: DESIGN-mediahound.md  EDITING.md  ROADMAP.md  self-host.md
docs/brand/: README.md
docs/design/: 01-barcode-scanning.md  02-discogs-integration.md  03-interop-and-safety.md  04-personal-catalog.md  05-new-media-types.md  README.md
docs/marketing/: LAUNCH_KIT.md  demo-gif.md
docs/marketing-videos/current/: demo_scenes.json
examples/: README.md  sample-import.csv
fastlane/: Appfile  Fastfile  README.md
mediahound/: __init__.py  backup.py  barcode.py  cli.py  config.example.toml  config.py  csvio.py  desktop.py  discogs_import.py  events.py  exporters.py  imaging.py  inventory.py  keystore.py  libraries.py  links.py  pipeline.py  publish.py  resale.py  serve.py  store.py  streaming.py
mediahound/identify/: base.py  tesseract.py
mediahound/metadata/: __init__.py  audiobook.py  base.py  discogs.py  games.py  musicbrainz.py  omdb.py  openlibrary.py  tmdb.py  upcitemdb.py  wikidata.py
mediahound/web/: identify.html  index.html  manifest.json  sw.js
mediahound/web/assets/css/: styles.css
mediahound/web/assets/js/: app.js  identify.js
packaging/: build-desktop.sh  mediahound.icns  mediahound.spec  mediahound_app.py
reelshelf/: __init__.py  cli.py  config.py  imaging.py  intro.py  pipeline.py  streaming.py
reelshelf/identify/: __init__.py  cloud.py  ollama.py
reelshelf/metadata/: __init__.py  omdb.py  tmdb.py  wikidata.py
reelshelf/web/: identify.html  index.html
reelshelf/web/assets/css/: styles.css
reelshelf/web/assets/js/: app.js  identify.js
tests/: conftest.py  test_audiobooks.py  test_barcode.py  test_books.py  test_cli.py  test_csvio.py  test_desktop.py  test_discogs.py  test_events.py  test_game_resale.py  test_games.py  test_imaging.py  test_interop.py  test_intro.py  test_inventory.py  test_keystore.py  test_libraries.py  test_metadata.py  test_music.py  test_music_tracks.py  test_personal.py  test_pipeline.py  test_pipeline_internals.py  test_publish.py  test_serve.py  test_store.py  test_streaming.py  test_tmdb.py
tools/: README.md  cleanup_covers.py  enrich_music_library.py  fetch_covers.py  fetch_covers_itunes.py  music_to_mediahound_csv.py  music_to_mediahound_csv_clean.py
web/assets/js/: app.js
wiki/: Adding-Media.md  Command-Reference.md  Configuration-and-API-Keys.md  Desktop-App.md  Editing-and-Persisting-Changes.md  Home.md  Privacy.md  Publishing-Your-Catalog.md  README.md  _Sidebar.md
