[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "reelshelf"
version = "0.1.0"
description = "Turn photos of your DVD/VHS collection into a sleek, searchable web catalog."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Jacob Chirayath" }]
keywords = ["dvd", "vhs", "movies", "catalog", "collection", "ocr", "tmdb", "wikidata"]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Multimedia :: Video",
]
dependencies = [
    "requests>=2.28",
    "Pillow>=9.0",
]

[project.optional-dependencies]
ocr = ["pytesseract>=0.3.10"]   # zero-key default identifier
dev = ["pytest>=7.0"]

[project.urls]
Homepage = "https://github.com/jchirayath/reelshelf"
Source = "https://github.com/jchirayath/reelshelf"

[project.scripts]
reelshelf = "reelshelf.cli:main"

[tool.setuptools]
packages = ["reelshelf", "reelshelf.identify", "reelshelf.metadata"]

[tool.setuptools.package-data]
reelshelf = ["../web/**/*"]
