[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "reelshelf"
version = "0.1.0"
description = "Turn photos of your DVD/VHS collection into a sleek, searchable web catalog."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Jacob Chirayath" }]
keywords = ["dvd", "vhs", "movies", "catalog", "collection", "ocr", "tmdb", "wikidata"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Video",
]
dependencies = [
    "requests>=2.28",
    "Pillow>=9.0",
]

[project.optional-dependencies]
ocr = ["pytesseract>=0.3.10"]   # zero-key default identifier
dev = ["pytest>=7.0", "pytest-cov>=4.0", "ruff>=0.4"]

[project.urls]
Homepage = "https://github.com/jchirayath/reelshelf"
Source = "https://github.com/jchirayath/reelshelf"
Demo = "https://jchirayath.github.io/reelshelf/"
Issues = "https://github.com/jchirayath/reelshelf/issues"
Changelog = "https://github.com/jchirayath/reelshelf/blob/main/CHANGELOG.md"

[project.scripts]
reelshelf = "reelshelf.cli:main"

[tool.setuptools]
packages = ["reelshelf", "reelshelf.identify", "reelshelf.metadata"]
include-package-data = true

[tool.setuptools.package-data]
reelshelf = ["web/**/*", "config.example.toml"]

[tool.ruff]
line-length = 110
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "W"]
ignore = ["E501"]   # long literals (e.g. poster URLs in mock data) are unavoidable

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
