[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mediahound"
version = "0.7.0"
description = "Turn photos of your movie & music collection into a sleek, searchable web catalog."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Jacob Chirayath" }]
keywords = ["dvd", "vhs", "movies", "catalog", "collection", "ocr", "tmdb", "wikidata"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Video",
]
dependencies = [
    "requests>=2.28",
    "Pillow>=9.0",
    "qrcode>=7.0",          # `mediahound app --phone` prints a scannable QR for phone uploads
    "keyring>=24.0",        # store provider API keys in the OS keychain (admin console)
]

[project.optional-dependencies]
ocr = ["pytesseract>=0.3.10"]   # zero-key default identifier
barcode = ["zxing-cpp>=2.2"]    # decode UPC/EAN barcodes from cover photos (pip wheel, no system lib)
desktop = ["pywebview>=4.0"]    # native window for `mediahound gui` / the bundled app
build = ["pyinstaller>=6.0"]    # package the desktop app into a .app / .exe
dev = ["pytest>=7.0", "pytest-cov>=4.0", "ruff>=0.4"]

[project.urls]
Homepage = "https://github.com/jchirayath/mediahound"
Source = "https://github.com/jchirayath/mediahound"
Demo = "https://jchirayath.github.io/mediahound/"
Issues = "https://github.com/jchirayath/mediahound/issues"
Changelog = "https://github.com/jchirayath/mediahound/blob/main/CHANGELOG.md"

[project.scripts]
mediahound = "mediahound.cli:main"

[project.gui-scripts]
mediahound-gui = "mediahound.desktop:main"

[tool.setuptools]
packages = ["mediahound", "mediahound.identify", "mediahound.metadata"]
include-package-data = true

[tool.setuptools.package-data]
mediahound = ["web/**/*", "config.example.toml"]

[tool.ruff]
line-length = 110
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "W"]
ignore = ["E501"]   # long literals (e.g. poster URLs in mock data) are unavoidable

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
